--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
                             <h1 class="display-5 fw-bolder text-white mb-2">Welcome to JovarkOS,
                             </h1>
                             <p class="lead fw-normal text-white-50 mb-4">A GNU/Linux
-                                distribution based on Arch Linux with the goal striving towards a out of box experience
+                                distribution based on Arch Linux with the goal of striving towards a out of box
+                                experience
                                 the Linux desktop has never
                                 seen before.
                             </p>
