--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"
         integrity="sha512-RXf+QSDCUQs5uwRKaDoXt55jygZZm2V++WUZduaU/Ui/9EGp3f/2KZVahFZBKGH0s774sd3HmrhUy+SgOFQLVQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
+    <!-- Confetti for submitting form -->
+    <script src="js/confetti.min.js"></script>
     <!-- Bootstrap icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
@@ -27,7 +29,7 @@
 
 </head>
 
-<body class="d-flex flex-column h-100">
+<body class="d-flex flex-column h-100" id="body">
     <main class="flex-shrink-0">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container px-5">
@@ -177,17 +179,17 @@
                         class="d-flex align-items-center justify-content-between flex-column flex-xl-row text-center text-xl-start">
                         <div class="mb-4 mb-xl-0">
                             <div class="fs-3 fw-bold text-white">Product updates, delivered to you.</div>
-                            <div class="text-white-50">Sign up for our newsletter for the latest updates. (Coming
-                                soon...)</div>
+                            <div class="text-white-50">Sign up for our newsletter for the latest updates and alerts.
+                            </div>
                         </div>
                         <!-- placeholder="Email address... -->
                         <div class="ms-xl-4">
                             <div class="input-group mb-2">
                                 <input class="form-control" type="text" placeholder="Your email here..."
                                     aria-label="Email address..." aria-describedby="button-newsletter" id="email" />
-                                <button class="btn btn-outline-light" id="button-newsletter" type="button"
-                                    onclick="getEmail();">Sign
-                                    up</button>
+                                <button class="btn btn-outline-light" id="confirmation-text button-newsletter"
+                                    type="button" onclick="getEmail();"><span id="confirmation-text">Sign
+                                        up</span></button>
                             </div>
                             <div class="small text-white-50 disabled">We care about privacy, and will never share your
                                 data.
