Change product to work

--- a/download.html
+++ b/download.html
@@ -62,7 +62,7 @@
             <div class="container px-5 my-5">
                 <div class="text-center mb-5">
                     <h1 class="fw-bolder">Download</h1>
-                    <p class="lead fw-normal text-muted mb-0 fs-6">Enjoy our product? Drop a couple bucks down below to
+                    <p class="lead fw-normal text-muted mb-0 fs-6">Enjoy our work? Drop a couple bucks down below to
                         pay
                         to keep our servers on!</p>
                 </div>
