Change download link to iso.jovarkos.org subdomain

--- a/download.html
+++ b/download.html
@@ -103,7 +103,7 @@
                                     </li>
                                 </ul>
                                 <div class="d-grid"><a class="btn btn-outline-primary"
-                                        href="https://repo.jovarkos.org/iso/latest/jovarkos-latest.iso">Download</a>
+                                        href="https://iso.jovarkos.org/latest/jovarkos-latest.iso">Download</a>
                                 </div>
                             </div>
                         </div>
