--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
                         <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                        <li class="nav-item"><a class="nav-link" href="download.html">Download</a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://docs.jovarkos.org/#/">Documentation</a>
-                        </li>
+                        <li class="nav-item"><a class="nav-link" href="https://docs.jovarkos.org/#/">Documentation</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdownBlog" href="#" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">Media</a>
@@ -54,6 +52,7 @@
                                 <li><a class="dropdown-item" href="screenshots.html">Screenshots</a></li>
                             </ul>
                         </li>
+                        <li class="nav-item"><a class="nav-link" href="download.html">Download</a></li>
                     </ul>
                 </div>
             </div>
