Remove Get Started and format Download ISO like it

--- a/index.html
+++ b/index.html
@@ -72,9 +72,7 @@
                                 seen before.
                             </p>
                             <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
-                                <a class="btn btn-primary btn-lg px-4 me-sm-3" href="https://docs.jovarkos.org/#/">Get
-                                    Started</a>
-                                <a class="btn btn-outline-light btn-lg px-4" href="download.html">Download Installer</a>
+                                <a class="btn btn-primary btn-lg px-4 me-sm-3" href="download.html">Download ISO</a>
                             </div>
                         </div>
                     </div>
