Redesign contact page with new card structure

--- a/contact.html
+++ b/contact.html
@@ -68,51 +68,34 @@
                         <h1 class="fw-bolder">Get in touch</h1>
                         <p class="lead fw-normal text-muted mb-0">We'd love to hear from you</p>
                     </div>
-                    <div class="container">
-                        <div class="row mb-4">
-                            <div class="col">
-                                <div class="card">
-                                    <div class="card-body">
-                                        <h4 class="card-title">Discord</h4>
-                                        <h6 class="card-subtitle text-muted">Support Server</h6>
-                                    </div>
-                                    <div class="card-body">
-                                        <p class="card-text">Fun and informational server for JovarkOS</p>
-                                        <a href="https://discord.gg/8jabsmuyU3"
+                    <div class="card-group">
+                        <div class="card">
+                          <div class="card-body">
+                            <h4 class="card-title">Discord</h4>
+                            <h6 class="card-subtitle text-muted">Support Server</h6>
+                            <p class="card-text">Fun and informational server for JovarkOS</p>
+                            <a href="https://discord.gg/8jabsmuyU3"
                                             class="btn btn-outline-primary card-link">Join!</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div class="card">
-                                    <div class="card-body">
-                                        <h4 class="card-title">Twitter</h4>
-                                        <h6 class="card-subtitle text-muted">Send us a tweet!</h6>
-                                    </div>
-                                    <div class="card-body">
-                                        <br>
-                                        <a class="btn btn-outline-primary" href="https://twitter.com/jovarkos/"
+                          </div>
+                        </div>
+                        <div class="card">
+                          <div class="card-body">
+                            <h4 class="card-title">Twitter</h4>
+                            <p class="card-text">Send us a tweet!</p>
+                            <a class="btn btn-outline-primary" href="https://twitter.com/jovarkos/"
                                             type="button">Our
                                             Profile</a>
-                                    </div>
-                                </div>
-                            </div>
+                          </div>
                         </div>
-                        <div class="row">
-                            <div class="col">
-                                <div class="card">
-                                    <div class="card-body">
-                                        <blockquote class="blockquote mb-0">
-                                            <p class="card-title">Still using Email?</p>
-                                            <p class="card-subtitle text-muted mb-2 fst-italic fs-6">We do too...</p>
-                                            <a class="btn btn-outline-secondary"
+                        <div class="card">
+                          <div class="card-body">
+                            <h4 class="card-title">Still using Email?</h4>
+                            <p class="card-text">We do too...</p>
+                            <a class="btn btn-outline-secondary"
                                                 href="mailto:support@jovarkos.org">Email us!</a>
-                                        </blockquote>
-                                    </div>
-                                </div>
-                            </div>
+                          </div>
                         </div>
-                    </div>
+                      </div>
                 </div>
             </div>
         </section>
