Rewording for providing documentation

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                              -->
                             <h2 class="fw-bolder">Documentation</h2>
 
-                            <p class="lead fw-normal text-muted mb-5">We try to provide open documentation.
+                            <p class="lead fw-normal text-muted mb-5">We are starting to provide open documentation.
                                 If we don't have the answer, we will refer you to somewhere
                                 that does.</p>
                         </div>
