Remove button formatting for "Download" in navbar

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                 <li><a class="dropdown-item" href="screenshots.html">Screenshots</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item"><a class="nav-link btn btn-primary btn-lg" href="download.html">Download</a></li>
+                        <li class="nav-item"><a class="nav-link" href="download.html">Download</a></li>
                     </ul>
                 </div>
             </div>
