--- a/about.html
+++ b/about.html
@@ -157,6 +157,14 @@
                                     target="_blank">https://tilde.club/~lyiriyah/</a></div>
                         </div>
                     </div>
+                    <div class="col mb-5 mb-5 mb-xl-0">
+                        <div class="text-center">
+                            <img class="img-fluid rounded-circle mb-4 px-4"
+                                src="https://d1ras9cbx5uamo.cloudfront.net/eyJidWNrZXQiOiAiY29tLm51bWVyYWRlIiwgImtleSI6ICJpbnN0cnVjdG9ycy9mOWNiZWM2ODI3NjE0MTBmOGM5OWNlYjUwYTc0MGY3MC5wbmciLCAiZWRpdHMiOiB7InJlc2l6ZSI6IHsid2lkdGgiOiAyNTYsICJoZWlnaHQiOiAyNTZ9fX0="
+                                alt="Generic Profile picture" loading="lazy" />
+                            <h5 class="fw-bolder">starship-boi</h5>
+                            <div class="fst-italic text-muted">Front-end Web Developer, Distro Visionary</div>
+                        </div>
                 </div>
                 <div class="row">
                     <div class="col mb-5">
