Remove distro visionary

--- a/about.html
+++ b/about.html
@@ -163,7 +163,7 @@
                                 src="https://d1ras9cbx5uamo.cloudfront.net/eyJidWNrZXQiOiAiY29tLm51bWVyYWRlIiwgImtleSI6ICJpbnN0cnVjdG9ycy9mOWNiZWM2ODI3NjE0MTBmOGM5OWNlYjUwYTc0MGY3MC5wbmciLCAiZWRpdHMiOiB7InJlc2l6ZSI6IHsid2lkdGgiOiAyNTYsICJoZWlnaHQiOiAyNTZ9fX0="
                                 alt="Generic Profile picture" loading="lazy" />
                             <h5 class="fw-bolder">starship-boi</h5>
-                            <div class="fst-italic text-muted">Front-end Web Developer, Distro Visionary</div>
+                            <div class="fst-italic text-muted">Front-end Web Developer and Student</div>
                         </div>
                 </div>
                 <div class="row">
