--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
                         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                         <li class="nav-item"><a class="nav-link" href="download.html">Download</a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://docs.jovarkos.org/#/">Documentation</a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://docs.jovarkos.org/#/">Documentation</a>
+                        </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdownBlog" href="#" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">Media</a>
