Security + SEO update with target and rel

--- a/about.html
+++ b/about.html
@@ -154,7 +154,7 @@
                                 alt="Generic Profile picture" loading="lazy" />
                             <h5 class="fw-bolder">lyiriyah</h5>
                             <div class="fst-italic text-muted"><a href="https://tilde.club/~lyiriyah/"
-                                    target="_blank">https://tilde.club/~lyiriyah/</a></div>
+                                    target="_blank" rel="noopener nofollow noreferrer">https://tilde.club/~lyiriyah/</a></div>
                         </div>
                     </div>
                     <div class="col mb-5 mb-5 mb-xl-0">
