--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@
                             <h6 class="card-subtitle text-muted">Support Server</h6>
                             <p class="card-text">Fun and informational server for JovarkOS</p>
                             <a href="https://discord.gg/8jabsmuyU3"
-                                            class="btn btn-outline-primary card-link" target="_blank">Join!</a>
+                                            class="btn btn-outline-primary card-link" target="_blank" rel="noopener nofollow noreferrer">Join!</a>
                           </div>
                         </div>
                         <div class="card">
@@ -83,7 +83,7 @@
                             <h4 class="card-title">Twitter</h4>
                             <p class="card-text">Send us a tweet!</p>
                             <a class="btn btn-outline-primary" href="https://twitter.com/jovarkos/"
-                                            type="button" target="_blank">Our
+                                            type="button" target="_blank" rel="noopener nofollow noreferrer">Our
                                             Profile</a>
                           </div>
                         </div>
@@ -92,7 +92,7 @@
                             <h4 class="card-title">Still using Email?</h4>
                             <p class="card-text">We do too...</p>
                             <a class="btn btn-outline-secondary"
-                                                href="mailto:support@jovarkos.org" target="_blank">Email us!</a>
+                                                href="mailto:support@jovarkos.org" target="_blank" rel="noopener nofollow noreferrer">Email us!</a>
                           </div>
                         </div>
                       </div>
