--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
-    <link rel="canonical" href="https://jovarkos.org/index.html">
+    <link rel="canonical" href="https://jovarkos.org/index.html" />
+    <script async defer data-website-id="7b3e62b6-b48c-442d-b8b6-775fc5442707" src="http://repo.jovarkos.org:3000/umami.js"></script>
 
 </head>
 
