--- a/about.html
+++ b/about.html
@@ -153,8 +153,8 @@
                                 src="https://d1ras9cbx5uamo.cloudfront.net/eyJidWNrZXQiOiAiY29tLm51bWVyYWRlIiwgImtleSI6ICJpbnN0cnVjdG9ycy9mOWNiZWM2ODI3NjE0MTBmOGM5OWNlYjUwYTc0MGY3MC5wbmciLCAiZWRpdHMiOiB7InJlc2l6ZSI6IHsid2lkdGgiOiAyNTYsICJoZWlnaHQiOiAyNTZ9fX0="
                                 alt="Generic Profile picture" loading="lazy" />
                             <h5 class="fw-bolder">lyiriyah</h5>
-                            <div class="fst-italic text-muted"><a href="https://tilde.club/~lyiriyah/"
-                                    target="_blank" rel="noopener nofollow noreferrer">https://tilde.club/~lyiriyah/</a></div>
+                            <div class="fst-italic text-muted"><a href="https://tilde.club/~lyiriyah/" target="_blank"
+                                    rel="noopener nofollow noreferrer">https://tilde.club/~lyiriyah/</a></div>
                         </div>
                     </div>
                     <div class="col mb-5 mb-5 mb-xl-0">
@@ -165,19 +165,19 @@
                             <h5 class="fw-bolder">starship-boi</h5>
                             <div class="fst-italic text-muted">Front-end Web Developer and Student</div>
                         </div>
-                </div>
-                <div class="row">
-                    <div class="col mb-5">
-                        <div class="text-center">
-                            <img class="img-fluid rounded-circle mb-4 px-4"
-                                src="https://d1ras9cbx5uamo.cloudfront.net/eyJidWNrZXQiOiAiY29tLm51bWVyYWRlIiwgImtleSI6ICJpbnN0cnVjdG9ycy9mOWNiZWM2ODI3NjE0MTBmOGM5OWNlYjUwYTc0MGY3MC5wbmciLCAiZWRpdHMiOiB7InJlc2l6ZSI6IHsid2lkdGgiOiAyNTYsICJoZWlnaHQiOiAyNTZ9fX0="
-                                alt="Generic Profile picture" loading="lazy" />
-                            <h5 class="fw-bolder">You</h5>
-                            <div class="fst-italic text-muted"><a href="contact.html">Join us today!</a></div>
+                    </div>
+                    <div class="row">
+                        <div class="col mb-5">
+                            <div class="text-center">
+                                <img class="img-fluid rounded-circle mb-4 px-4"
+                                    src="https://d1ras9cbx5uamo.cloudfront.net/eyJidWNrZXQiOiAiY29tLm51bWVyYWRlIiwgImtleSI6ICJpbnN0cnVjdG9ycy9mOWNiZWM2ODI3NjE0MTBmOGM5OWNlYjUwYTc0MGY3MC5wbmciLCAiZWRpdHMiOiB7InJlc2l6ZSI6IHsid2lkdGgiOiAyNTYsICJoZWlnaHQiOiAyNTZ9fX0="
+                                    alt="Generic Profile picture" loading="lazy" />
+                                <h5 class="fw-bolder">You</h5>
+                                <div class="fst-italic text-muted"><a href="contact.html">Join us today!</a></div>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
         </section>
     </main>
     <!-- Footer-->
@@ -199,7 +199,10 @@
         </div>
     </footer>
     <!-- Bootstrap core JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
+
     <!-- Core theme JS-->
     <script data-goatcounter="https://jovarkos.goatcounter.com/count" src="js/scripts.js"></script>
     <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
