--- a/contact.html
+++ b/contact.html
@@ -70,32 +70,32 @@
                     </div>
                     <div class="card-group">
                         <div class="card">
-                          <div class="card-body">
-                            <h4 class="card-title">Discord</h4>
-                            <h6 class="card-subtitle text-muted">Support Server</h6>
-                            <p class="card-text">Fun and informational server for JovarkOS</p>
-                            <a href="https://discord.gg/8jabsmuyU3"
-                                            class="btn btn-outline-primary card-link" target="_blank" rel="noopener nofollow noreferrer">Join!</a>
-                          </div>
+                            <div class="card-body">
+                                <h4 class="card-title">Discord</h4>
+                                <h6 class="card-subtitle text-muted">Support Server</h6>
+                                <p class="card-text">Fun and informational server for JovarkOS</p>
+                                <a href="https://discord.gg/8jabsmuyU3" class="btn btn-outline-primary card-link"
+                                    target="_blank" rel="noopener nofollow noreferrer">Join!</a>
+                            </div>
                         </div>
                         <div class="card">
-                          <div class="card-body">
-                            <h4 class="card-title">Twitter</h4>
-                            <p class="card-text">Send us a tweet!</p>
-                            <a class="btn btn-outline-primary" href="https://twitter.com/jovarkos/"
-                                            type="button" target="_blank" rel="noopener nofollow noreferrer">Our
-                                            Profile</a>
-                          </div>
+                            <div class="card-body">
+                                <h4 class="card-title">Twitter</h4>
+                                <p class="card-text">Send us a tweet!</p>
+                                <a class="btn btn-outline-primary" href="https://twitter.com/jovarkos/" type="button"
+                                    target="_blank" rel="noopener nofollow noreferrer">Our
+                                    Profile</a>
+                            </div>
                         </div>
                         <div class="card">
-                          <div class="card-body">
-                            <h4 class="card-title">Still using Email?</h4>
-                            <p class="card-text">We do too...</p>
-                            <a class="btn btn-outline-secondary"
-                                                href="mailto:support@jovarkos.org" target="_blank" rel="noopener nofollow noreferrer">Email us!</a>
-                          </div>
+                            <div class="card-body">
+                                <h4 class="card-title">Still using Email?</h4>
+                                <p class="card-text">We do too...</p>
+                                <a class="btn btn-outline-secondary" href="mailto:support@jovarkos.org" target="_blank"
+                                    rel="noopener nofollow noreferrer">Email us!</a>
+                            </div>
                         </div>
-                      </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -119,7 +119,10 @@
         </div>
     </footer>
     <!-- Bootstrap core JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
+
     <!-- Core theme JS-->
     <script data-goatcounter="https://jovarkos.goatcounter.com/count" src="js/scripts.js"></script>
     <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
