--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
     <link rel="canonical" href="https://jovarkos.org/index.html" />
-    <script async defer data-website-id="7b3e62b6-b48c-442d-b8b6-775fc5442707" src="https://repo.jovarkos.org:3000/umami.js"></script>
+    <script async defer data-website-id="7b3e62b6-b48c-442d-b8b6-775fc5442707"
+        src="https://repo.jovarkos.org:3000/umami.js"></script>
 
 </head>
 
@@ -216,7 +217,10 @@
         </div>
     </footer>
     <!-- Bootstrap core JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
+
     <!-- Core theme JS-->
     <script data-goatcounter="https://jovarkos.goatcounter.com/count" src="js/scripts.js"></script>
     <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
